# Traversaal-x-Optimized-AI-Hackathon

./: README.md
.github/workflows/: release.yml
backend/: .env.example  README.md  dockerfile  main.py  pyproject.toml
backend/AgentPro/agentpro/: __init__.py
backend/app/routes/: routes.py
backend/app/routes/call_agent/: apis.py  backend_mock_apis.py  dtos.py  helper.py  prompts.py
backend/app/routes/dashboard/: apis.py
backend/app/utils/logging/: custom_log.py  logger.py
backend/app/utils/mock_jsons/: backend_mock_json_for_agent_onboarding.json
dialpad/: .env  dockerfile  main.py  package-lock.json  package.json
dialpad/public/dialer/js/: main.js
dialpad/public/js/: main.js
dialpad/server/: server.js
frontend/: dockerfile  package-lock.json  package.json  pnpm-lock.yaml
frontend/components/: sidebar-nav.tsx
frontend/lib/: api.ts
general-logging/: README.md  config.js  dockerfile  index.html  package-lock.json  package.json  script.js  server.js
